--- a/lost-and-found/lost-and-found/Base.lproj/Main.storyboard
+++ b/lost-and-found/lost-and-found/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Attitude :" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ADo-tQ-FF7">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Altitude" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ADo-tQ-FF7">
                                 <frame key="frameInset" minX="16" minY="150" width="132" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -107,7 +107,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="atF-Ub-4a5">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="atF-Ub-4a5">
                                 <frame key="frameInset" minX="16" minY="291" width="343" height="65"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.95801061391830444" green="0.91904658079147339" blue="0.82691854238510132" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -124,7 +124,7 @@
                     </view>
                     <connections>
                         <outlet property="address" destination="atF-Ub-4a5" id="AMY-va-6Eu"/>
-                        <outlet property="attitude" destination="wSI-Mg-d1H" id="c1K-Xo-bxd"/>
+                        <outlet property="altitiude" destination="wSI-Mg-d1H" id="d9P-AX-LlD"/>
                         <outlet property="course" destination="6BJ-2o-McD" id="OKt-vj-9pF"/>
                         <outlet property="lattitude" destination="dl2-Ag-pzb" id="Bbw-YI-GpU"/>
                         <outlet property="longitude" destination="WyK-ej-WqY" id="31r-EY-jr5"/>
